--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -1,5 +1,9 @@
 .bloodsugar {
   padding: 1rem 2rem 1rem 2rem;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
 }
 .bloodsugar .stb{
   display: flex;
@@ -74,12 +78,16 @@
 
 .date {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   overflow-x: auto;
   align-items: flex-start;
   gap: 40px;
   margin-bottom: 2rem;
+  scrollbar-width: none;
+}
+.date::-webkit-scrollbar {
+  display: none;
 }
 
 .day-container {
@@ -103,7 +111,7 @@
   width: 72px;
   height: 72px;
   position: relative;
-  border-radius: 9999px;
+  border-radius: 3rem;
   cursor: pointer;
 }
 
@@ -123,10 +131,32 @@
 
 /* diagram */
 .diagram {
-  width: 100%;
-  height: 100%;
-  background: white;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
+  min-width: 100.1875rem;
+  min-height: 23rem;
+  flex-shrink: 0;
+  border-radius: 0.625rem;
+  background: #FFF;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  overflow-x: auto;
+  /* align-items:center ; */
+  margin-bottom: 2rem;
+  scrollbar-width: none;
+  
 }
-
+.diagram .measure{
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  text-align: center;
+  flex-direction: row;
+  font-family: 'Roboto',sans-serif;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding: 2rem;
+}
+.diagram .measure .num{
+  color: var(--Red);
+}
