--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -132,10 +132,9 @@
 /* diagram */
 .diagram {
   display: flex;
-  /* justify-content: center; */
-  align-items: center;
+  padding: 1.5rem 2.5rem;
   flex-direction: column;
-  min-width: 100.1875rem;
+  width: 100%;
   min-height: 23rem;
   flex-shrink: 0;
   border-radius: 0.625rem;
@@ -143,23 +142,58 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   overflow-x: auto;
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
   scrollbar-width: none;
   
 }
 .diagram .measure{
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* text-align: center; */
+  justify-content: center;
   flex-direction: row;
   font-family: 'Roboto',sans-serif;
   font-size: 2rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  /* padding: 2rem; */
 }
 .diagram .measure .num{
   color: var(--Red);
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  min-width: 100.1875rem;
+  min-height:15.625rem; 
+  background-color: var(--whiteColor);
+}
+
+.red-bar {
+  position: absolute;
+  bottom: 0;
+  width: 0.9375rem;
+  height: 8.56013rem;
+  flex-shrink: 0;
+  background-color: var(--Red);
+}
+
+.mark {
+  position: absolute;
+  bottom: 0;
+}
+
+.mark-bar {
+  width: 1rem;
+  height: 13.5625rem;
+  flex-shrink: 0; 
+  background-color: var(--Red);
+}
+
+.mark-text {
+  bottom:-222em;
+  left: 50%;
+  border: 1px solid chartreuse;
+  transform: translateX(-50%);
+  font-size: 1rem;
+  color: #000;
 }
