--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -130,23 +130,25 @@
 }
 
 /* diagram */
+
 .diagram {
   display: flex;
   padding: 1.5rem 2.5rem;
   flex-direction: column;
   width: 100%;
-  min-height: 23rem;
+  min-height: 25rem;
   flex-shrink: 0;
   border-radius: 0.625rem;
   background: var(--whiteColor);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
   overflow-x: auto;
   margin-bottom: 2.5rem;
   scrollbar-width: none;
-  
 }
-.diagram .measure{
+.diagram::-webkit-scrollbar {
+  display: none;
+}
+.diagram .measure {
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -156,44 +158,27 @@
   font-weight: 600;
   line-height: normal;
 }
-.diagram .measure .num{
+.diagram .measure .num {
   color: var(--Red);
 }
-
 .container {
+  display: flex;
   position: relative;
   width: 100%;
-  min-width: 100.1875rem;
-  min-height:15.625rem; 
-  background-color: var(--whiteColor);
+  min-height: 250px; /* Adjusted for visualization */
 }
-
-.red-bar {
+.bar {
+  width: 15px;
+  height: 100%; /* Height will be adjusted dynamically */
+  background: var(--Red);
+  margin-right: 5px; /* Space between bars */
+}
+.label {
   position: absolute;
-  bottom: 0;
-  width: 0.9375rem;
-  height: 8.56013rem;
-  flex-shrink: 0;
-  background-color: var(--Red);
-}
-
-.mark {
-  position: absolute;
-  bottom: 0;
-}
-
-.mark-bar {
-  width: 1rem;
-  height: 13.5625rem;
-  flex-shrink: 0; 
-  background-color: var(--Red);
-}
-
-.mark-text {
-  bottom:-222em;
-  left: 50%;
-  border: 1px solid chartreuse;
-  transform: translateX(-50%);
-  font-size: 1rem;
-  color: #000;
+  color: #1F1F1F;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  word-wrap: break-word;
+  bottom: -30px; /* Adjust based on your design */
 }
