--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -141,10 +141,7 @@
   background: var(--whiteColor);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
-  overflow-x: auto;
   margin-bottom: 2.5rem;
-  scrollbar-width: none;
-  
 }
 .diagram .measure{
   display: flex;
@@ -166,8 +163,12 @@
   min-width: 100.1875rem;
   min-height:15.625rem; 
   background-color: var(--whiteColor);
+  overflow-x: auto;
+  scrollbar-width: none;
 }
-
+.container::-webkit-scrollbar {
+  display: none;
+}
 .red-bar {
   position: absolute;
   bottom: 0;
@@ -175,6 +176,7 @@
   height: 8.56013rem;
   flex-shrink: 0;
   background-color: var(--Red);
+  top: 5.8rem;
 }
 
 .mark {
@@ -190,10 +192,11 @@
 }
 
 .mark-text {
-  bottom:-222em;
-  left: 50%;
-  border: 1px solid chartreuse;
-  transform: translateX(-50%);
+  transform: translateX(-25%);
+  color: var(--graycolor);
+  font-family: 'Roboto',sans-serif;
   font-size: 1rem;
-  color: #000;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
