--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -140,7 +140,6 @@
   border-radius: 0.625rem;
   background: var(--whiteColor);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
   margin-bottom: 2.5rem;
 }
 .diagram .measure{
@@ -156,7 +155,13 @@
 .diagram .measure .num{
   color: var(--Red);
 }
-
+.dig{
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+.dig::-webkit-scrollbar {
+  display: none;
+}
 .container {
   position: relative;
   width: 100%;
@@ -169,19 +174,17 @@
 .container::-webkit-scrollbar {
   display: none;
 }
-.red-bar {
+
+.mark ,.red-bar{
   position: absolute;
   bottom: 0;
+}
+.red-bar {
   width: 0.9375rem;
   height: 8.56013rem;
   flex-shrink: 0;
   background-color: var(--Red);
-  top: 5.8rem;
-}
-
-.mark {
-  position: absolute;
-  bottom: 0;
+  top: 5.5rem;
 }
 
 .mark-bar {
@@ -192,6 +195,7 @@
 }
 
 .mark-text {
+  margin-top: 0.45em;
   transform: translateX(-25%);
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
