--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -163,7 +163,7 @@
   line-height: 110%;
 }
 
-.container {
+.about-us-section3 .container {
   position: relative;
   width: 100%;
   display: flex;
