--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -162,7 +162,7 @@
 .dig::-webkit-scrollbar {
   display: none;
 }
-.container {
+.diagram .container {
   position: relative;
   width: 100%;
   min-width: 100.1875rem;
