--- a/src/pages/Smart_health_metrics.css
+++ b/src/pages/Smart_health_metrics.css
@@ -13,7 +13,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 1.4em;
   flex-grow: 1;
   justify-content: center;
@@ -90,19 +90,14 @@
   background-color: var(--secondaryColor);
   color: var(--Red);
 }
-
-/* @media (max-width: 768px) {
-  .disease h3 {
-    font-size: 24px;
-    margin-bottom: 3vh;
+/* responsine design */
+@media (max-width: 1000px) {
+  .child{
+  flex-wrap: wrap;
+}
+}
+@media (max-width: 450px) {
+  .disease h3{
+    font-size: 1.6em;
   }
-
-  .child .recording {
-    max-width: 100%; 
-    margin-bottom: 2vh;
-  }
-
-  .child .recording .btn {
-    padding: 3% 10%;
-  }
-} */
+}
