--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -1,4 +1,5 @@
 .bloodsugar {
+  position: relative;
   padding: 1rem 2rem 2.5rem 2rem;
   display: flex;
   flex: 1;
@@ -201,7 +202,8 @@
 .bloodsugar .btn .addrec{
   display: flex;
   justify-content: center;
-  height: 3rem;
+  text-align: center;
+  max-height: 3rem;
   padding: 1rem 0.75rem;
   align-items: center;
   flex: 0.3;
@@ -218,4 +220,40 @@
 .bloodsugar .btn .addrec:hover{
   background-color: var(--secondaryColor);
   color: var(--Red);
+}
+/* after-click-btn */
+.bloodsugar .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(18, 22, 25, 0.65);  
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.bloodsugar .overlay .seedet{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  max-height: 3rem;
+  padding: 1rem 4rem;
+  align-items: center;
+  color: var(--whiteColor);
+  border-radius: 0.625rem;
+  background: var(--Red);
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; 
+  letter-spacing: 0.03125rem;
+}
+.bloodsugar .overlay .seedet:hover{
+  opacity: 0.7;
 }
