--- a/src/pages/Contact_us.css
+++ b/src/pages/Contact_us.css
@@ -8,24 +8,14 @@
   padding: 5%;
   flex-direction: column;
   align-items: center;
-  gap: 5%;
 }
 
 .contact .name {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  gap: 10px;
-}
-.contact #nam{
-  display: flex;
-  height: 48px;
-  padding: 0px 7.6vw 0px 2vh;
-  width: 100%;
-  align-items: center;
-  align-self: stretch;
-  border-radius: 10px;
-  border: 1px solid var(--Red);
+  gap: 1.2em;
 }
 .contact_img {
   max-width: 50%;
@@ -35,26 +25,24 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 48px;
-  flex: 1 0 0;
+  gap: 3em;
   justify-content: center;
 }
 
 .contact-form h2 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 42px;
+  font-size: 2.8em;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
-  margin-bottom: 8px;
 }
 
 .contact-form p {
   align-self: stretch;
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: 1.2em;
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
@@ -62,14 +50,15 @@
 
 .contact-form form {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-form form label {
   display: flex;
-  margin-bottom: 8px;
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
-  font-size: 14px;
+  font-size: 1em;
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
@@ -78,22 +67,31 @@
 .contact-form form input,
 .contact-form form textarea {
   width: 100%;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 0.5em;
+  border-radius: 0.4em;
   border: 1px solid var(--Red);
   outline: none;
   background-color: var(--whiteColor);
-  margin-bottom: 16px;
+  margin-bottom: 1.2rem;
 }
-
+.contact-form form input::placeholder{
+  font-size: 0.8em;
+}
+.contact-form form textarea::placeholder{
+  font-size: 1.2em;
+}
 .contact-form textarea {
   resize: none;
   display: flex;
-  height: 156px;
-  padding: 12px 16px;
+  height: 20vh;
   align-items: center;
-  gap: 8px;
   align-self: stretch;
+}
+.contact-form .lblc{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5em;
 }
 .contact-form form .btn {
   display: inline-block;
@@ -126,17 +124,23 @@
 @media screen and (max-width: 935px) {
   .contact {
     flex-direction: column;
-  }.contact_img, .contact-form {
+    justify-content: center;
+    align-items: center;
     max-width: 100%;
+    margin: auto;
   }
+  /* .contact_img, .contact-form {
+    max-width: 100%;
+  } */
+
 }
 
 @media screen and (max-width: 500px) {
   .contact-form h2 {
-    font-size: 36px; 
+    font-size: 2.5rem; 
   }
   .contact-form p, .contact-form form label {
-    font-size: 16px; 
+    font-size: 1em; 
   }
   .contact-form form input, .contact-form form textarea {
     padding: 8px; 
