--- a/src/pages/details-bloodsuger.css
+++ b/src/pages/details-bloodsuger.css
@@ -76,7 +76,10 @@
 .bloodsugard .inf-det{
   max-width: 84.375rem;
   min-height: 16rem;
-  
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .bloodsugard .inf-det h3{
   color: var(--graycolor);
@@ -87,10 +90,21 @@
   line-height: normal;
 }
 .bloodsugard .inf-det h4{
-  
+  color: var(--graycolor);
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 .bloodsugard .inf-det p{
-  
+  max-width: 81.5rem;
+  color: var(--darkgraycolor);
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 /* btn */
@@ -102,7 +116,6 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  max-height: 3rem;
   padding: 1rem 0.75rem;
   align-items: center;
   flex: 0.3;
