--- a/src/pages/sign_up.css
+++ b/src/pages/sign_up.css
@@ -1,140 +1,104 @@
 .sig {
   display: flex;
   flex-direction: row;
+  gap: 1em;
 }
-.flex1 .name {
+.sig .flex2 {
+  max-width: 100%;
   display: flex;
+}
+.sig .flex2 img{
+  width: 100%;
+}
+.sig .flex1{
+  display: flex;
+  padding: 11% 5%;
+  flex-direction: column;
+  gap: 3em;
+}
+.sig .flex1 .name {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  gap: 10px;
+  gap: 1.2em;
 }
-.flex1 #nam {
+.sig .flex1 #nam {
   display: flex;
   height: 48px;
-  padding: 0px 7.6vw 0px 2vh;
+  padding:2vh;
   width: 100%;
   align-items: center;
   align-self: stretch;
-  border-radius: 10px;
+  border-radius: 0.4em;
   border: 1px solid var(--Red);
 }
-.flex1 {
-  max-width: 50%;
-  display: flex;
-  padding: 80px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 48px;
-  flex: 1 0 0;
-  justify-content: center;
-}
-
-.flex2 {
-  max-width: 50%;
-}
-
-h2 {
+.sig h2 {
   color: var(--Red);
-  font-family: "Roboto", sans-serif;
-  font-size: 42px;
+  font-family: 'Roboto',sans-serif;
+  font-size: 2.625rem;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
 }
-
-.lbl {
+.sig .lbl, .lbl1, .lbl2 {
+  width: 100%;
+}
+.sig .lbl {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 4px;
+  align-self: stretch;
+  gap: 1em;
+}
+.sig .lbl1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.75em;
   align-self: stretch;
 }
-
-.label {
+.sig label {
   color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1em;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%;
-}
-
-.field {
-  display: flex;
-  height: 48px;
-  padding: 12px 16px;
-  align-items: center;
-  gap: 8px;
-  align-self: stretch;
-}
-
-.lbl1 {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 8px;
-  align-self: stretch;
-  margin-bottom: 16px;
-}
-.lbl2 {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 8px;
-  align-self: stretch;
-}
-
-label {
-  color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%;
+  line-height: 140%; 
   max-width: 100%;
   height: auto;
 }
-
-.inp {
+.sig .forml{
   display: flex;
-  height: 48px;
-  padding: 12px 16px;
-  align-items: center;
-  gap: 8px;
-  align-self: stretch;
-  border-radius: 10px;
-  border: 1px solid var(--Red);
+  flex-direction: column;
+  gap: 1em;
+  margin-top: -1.5em;
 }
-
-.disc {
+.sig .lbl2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.75em;
+  align-self: stretch;
+}
+.sig .inp {
+  width: 100%;
+  display: flex;
+  height: 2em;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 0.4em;
+  border: 0.01em solid var(--Red);
+}
+.sig .disc {
   color: var(--darkgraycolor);
   font-family: Roboto;
-  font-size: 12px;
+  font-size: 0.8em;
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
 }
-
-.parent {
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.lbl3 {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.forget {
-  margin: -0.8cm 0 0cm;
-  font-size: 0.9em;
-}
-
-.forget label {
+.sig .check label {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -145,107 +109,99 @@ label {
   font-weight: 400;
   line-height: 140%;
 }
-.tex {
+.sig .tex {
   color: var(--graycolor);
+  font-family: 'Roboto',sans-serif;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
-#custom-checkbox {
+.sig #custom-checkbox {
   display: none;
 }
-.custom-checkbox-label {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  border: 1px solid var(--Red);
+.sig .custom-checkbox-label {
+  display: flex;
+  align-items: center;
+  width: 1em;
+  height: 1em;
+  border: 0.02em solid var(--Red);
   cursor: pointer;
   position: relative;
 }
-#custom-checkbox:checked + .custom-checkbox-label::after {
+.sig #custom-checkbox:checked + .custom-checkbox-label::after {
   content: "";
   position: absolute;
-  left: 5px;
-  top: 1px;
-  width: 2px;
-  height: 8px;
+  left: 0.3em;
+  top: 0.04em;
+  width: 0.18em;
+  height: 0.5em;
   border: solid var(--secondaryColor);
-  border-width: 0 2.5px 2.5px 0;
+  border-width: 0 0.2em 0.2em 0;
   transform: rotate(45deg);
 }
 
-.flex1 .btn {
+.sig .flex1 .btn {
   display: inline-block;
   background-color: var(--Red);
   color: var(--whiteColor);
-  padding: 0vw 39% 0% 45%;
   text-align: center;
-  /* width: 100%; */
-  height: 48px;
+  padding: 0.4em;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 0.4em;
   border: 2px solid var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 24px;
+  font-size: 1.7em;
   font-weight: 500;
   line-height: 100%;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.10em;
   cursor: pointer;
-  margin-top: -4vh;
+  /* margin-top: -2rem; */
 }
 
-.flex1 .btn:hover {
+.sig .flex1 .btn:hover {
   background-color: var(--secondaryColor);
   color: var(--Red);
   border: none;
 }
 
-.btn-log {
+.sig .btn-log {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  gap: 1em;
+}
+.sig .blog {
   justify-content: center;
-  gap: 20px;
-}
-
-.btn-log div {
-  max-width: 100%;
-}
-.blog .svg {
-  margin-left: -1vh;
-}
-.blog {
   display: flex;
-  height: 48px;
-  padding: 0 4.9vh;
-  justify-content: center;
+  padding: 1vh 2vw;
   align-items: center;
-  flex: 1 0 0;
-  border-radius: 10px;
+  border-radius: 0.7em;
   background-color: var(--whiteColor);
   border: 2px solid var(--Red);
-  display: flex;
 }
-#face {
-  margin-left: 3vh;
-}
-.text {
+.sig .text {
   display: flex;
   padding: 0vh 2vh;
   justify-content: center;
   align-items: center;
-  gap: 10px;
   color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
 }
-.text:hover {
+.sig .text:hover {
   opacity: 0.7;
 }
-hr {
+.sig hr {
   opacity: 0.3;
 }
-.sign p {
+.sig .sign p {
   color: #1e1e1e;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -253,7 +209,7 @@ hr {
   font-weight: 400;
   line-height: 140%;
 }
-#nav {
+.sig #nav {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -261,6 +217,31 @@ hr {
   font-weight: 400;
   line-height: 140%;
 }
-#nav:hover {
+.sig #nav:hover {
   opacity: 0.7;
+}
+
+/* responsive */
+@media screen and (max-width: 768px) {
+  .sig {
+    flex-direction: column;
+  }
+  .sig .flex2, .sig .flex1 {
+    width: 100%;
+  }
+  .sig .flex2 {
+    order: -1;
+  }
+  .sig .btn-log{
+    flex-direction: column;
+  }
+  .sig .flex1{
+    padding-top: 0;
+  }
+}
+@media (max-width: 600px) {
+  .btn-log {
+    flex-direction: column; 
+    
+  }
 }
