--- a/src/pages/Contact_us.css
+++ b/src/pages/Contact_us.css
@@ -1,4 +1,5 @@
 .contact {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -121,7 +122,42 @@
   color: var(--Red);
   border: none;
 }
-
+/* after-click-btn */
+.contact .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(18, 22, 25, 0.65);  
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.contact .overlay .seedet{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  max-height: 3rem;
+  padding: 1rem 4rem;
+  align-items: center;
+  color: var(--whiteColor);
+  border-radius: 0.625rem;
+  background: var(--Red);
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; 
+  letter-spacing: 0.03125rem;
+}
+.contact .overlay .seedet:hover{
+  opacity: 0.7;
+}
 
 
 
