--- a/src/pages/details-bloodsuger.css
+++ b/src/pages/details-bloodsuger.css
@@ -5,17 +5,17 @@
   flex: 1;
   flex-direction: column;
   justify-content: center;
+  gap: 2.5em;
 }
-.bloodsugard .stb{
+.bloodsugard .stb {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 3rem;
 }
 .bloodsugard .stb h3 {
   color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-style: normal;
   font-weight: 700;
@@ -27,7 +27,7 @@
   display: flex;
   overflow-x: auto;
   align-items: flex-start;
-  gap: 40px;
+  gap: 2.5em;
   margin-bottom: 2.5rem;
   scrollbar-width: none;
 }
@@ -40,12 +40,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.2rem;
+  gap: 1.25rem;
 }
 .bloodsugard .day-name {
-  color: #1F1F1F;
+  color: #1f1f1f;
   font-size: 2rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   word-wrap: break-word;
 }
@@ -61,8 +61,8 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  font-size: 32px;
-  font-family: 'Roboto', sans-serif;
+  font-size: 2rem;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   word-wrap: break-word;
 }
@@ -70,10 +70,106 @@
   opacity: 0.6;
 }
 /* diagram */
+/* ChartStyle.css */
+.diagram .chart-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.diagram .chart-box {
+  padding: 2.5em;
+  border-radius: 1rem;
+  border: 1px var(--Red) solid;
+  flex-direction: column;
+  align-items: center;
+  max-width: 70vw;
+  min-height: 60vh;
+}
 
+.diagram .chart-title {
+  display: flex;
+  flex-direction: row;
+  color: var(--Red);
+  font-size: 1.25rem;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 600;
+  line-height: 1rem;
+  gap: 0.63em;
+}
+.diagram .chart-pre-diabetes p{
+  display: flex;
+  flex-direction: row;
+  color: var(--graycolor);
+  font-size: 1.25em;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 600;
+  gap: 0.2em;
+}
+.diagram .chart-pre-diabetes p .defnum{
+  color: var(--Red);
+  font-size: 1.5em;
+}
+.diagram  .chart-days {
+  display: flex;
+  justify-content: space-around;
+  align-items: center; 
+  flex-wrap: wrap; 
+}
+.diagram  .day {
+  flex: 1;
+  text-align: center;
+}
+/* .chart-days {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  width: 441px;
+  top: 440.76px;
+  left: 126px;
+}
+
+.chart-days div {
+  text-align: center;
+  color: #1F1F1F;
+  font-size: 12px;
+  font-family: 'Roboto';
+  font-weight: 700;
+  line-height: 14px;
+}
+
+.chart-bars {
+  position: absolute;
+  width: 438.73px;
+  height: 315.21px;
+  left: 124px;
+  top: 104.07px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.bar {
+  width: 21.02px;
+  position: absolute;
+  background: #BE0202;
+  border-radius: 5px;
+}
+
+.chart-values {
+  position: absolute;
+  top: 92.76px;
+  left: 33px;
+}
+
+.chart-values div {
+  text-align: right;
+  color: #1F1F1F;
+  font-size: 15px;
+  font-family: 'Roboto';
+  margin-bottom: 8px;
+} */
 
 /* inf-det */
-.bloodsugard .inf-det{
+.bloodsugard .inf-det {
   max-width: 84.375rem;
   min-height: 16rem;
   padding: 1rem;
@@ -81,38 +177,37 @@
   flex-direction: column;
   gap: 1rem;
 }
-.bloodsugard .inf-det h3{
+.bloodsugard .inf-det h3 {
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.875rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
 }
-.bloodsugard .inf-det h4{
+.bloodsugard .inf-det h4 {
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
-.bloodsugard .inf-det p{
+.bloodsugard .inf-det p {
   max-width: 81.5rem;
   color: var(--darkgraycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
-
 /* btn */
-.bloodsugard .btn{
+.bloodsugard .btn {
   display: flex;
   justify-content: center;
 }
-.bloodsugard .btn .addrec{
+.bloodsugard .btn .addrec {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -122,14 +217,14 @@
   color: var(--whiteColor);
   border-radius: 0.625rem;
   background: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 500;
-  line-height: 100%; 
+  line-height: 100%;
   letter-spacing: 0.03125rem;
 }
-.bloodsugard .btn .addrec:hover{
+.bloodsugard .btn .addrec:hover {
   background-color: var(--secondaryColor);
   color: var(--Red);
 }
