--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -50,6 +50,7 @@
         flex-shrink: 0;
         border-radius: 1rem;
         background: #BE0202;
+        border: none;
 
         p {
             color: #FFF;
@@ -62,4 +63,54 @@
             /* 154.684% */
         }
     }
+}
+
+/* date */
+.BP-page .BP-date {
+  width: 100%;
+  height: auto;
+  display: flex;
+  overflow-x: auto;
+  align-items: flex-start;
+  gap: 2.5em;
+  margin-bottom: 2.5rem;
+  scrollbar-width: none;
+}
+.BP-page .BP-date::-webkit-scrollbar {
+  display: none;
+}
+.BP-page .day-container {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
+}
+.BP-page .day-name {
+  color: #1F1F1F;
+  font-size: 2rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  word-wrap: break-word;
+}
+.BP-page .date-container {
+  width: 72px;
+  height: 72px;
+  position: relative;
+  border-radius: 3rem;
+  cursor: pointer;
+}
+.BP-page .date-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  word-wrap: break-word;
+}
+.BP-page .selected {
+  opacity: 0.6;
 }
