--- a/src/pages/doctors.css
+++ b/src/pages/doctors.css
@@ -84,30 +84,9 @@ input:hover{
   gap: 1rem;
 }
 
-.search-box img {
-  display: flex;
-  align-items: center;
-  padding: 15px;
-  width: 200px;
-  height: 200px;
-  object-fit: contain;
-  top: 189px;
-  left: 824px;
-  border-radius: 4px;
-  gap: 10px;
-}
 
-.doctors-details {
-  display: flex;
-  align-items: center;
-  width: 582px;
-  height: 194px;
-  top: 300px;
-  left: 809px;
-  border: 1px solid rgba(190, 2, 2, 1);
-  border-radius: 15px;
-  display: none;
-}
+
+
 
 .rot {
   display: inline-flex;
@@ -163,23 +142,22 @@ line-height: 110%; /* 1.375rem */
 .got {
   display: inline-flex;
   align-items: flex-start;
-  gap: 6px;
-  width: 114px;
-  height: 40.091px;
+  gap: 0.3rem;
+  width: 10rem;
+  height: 2.5rem;
   flex-shrink: 0;
   padding-top: 1rem;
 }
 
 .seou{
   color: #1F1F1F;
-font-family: Roboto;
-font-size: 15px;
+
+font-size: 0.9rem;
 font-style: normal;
-font-weight: 500;
+font-weight: 0.3rem;
 line-height: normal;
-
+font-family: "Roboto", sans-serif;
 }
-
 
 
 .star{
@@ -203,7 +181,8 @@ background: #BE0202;
 cursor: pointer;
 }
 
-.button:hover{
+.button:hover,
+.doctors-details:hover{
   background-color: var(--secondaryColor);
   color: var(--Red);
 }
@@ -213,8 +192,8 @@ cursor: pointer;
 }
 
 .right{
-  width: 27.4375rem;
-height: 50.3125rem;
+  width: 27rem;
+height: 50rem;
 flex-shrink: 0;
 border-radius: 0.625rem;
 border: 1px solid #BE0202;
@@ -227,7 +206,7 @@ width: 23.1875rem;
 height: 25.5rem;
 justify-content: center;
 align-items: center;
-gap: 0.625rem;
+gap: 0.630rem;
 flex-shrink: 0;
 
 }
@@ -235,7 +214,7 @@ flex-shrink: 0;
 .connect{
   display: flex;
   
-  width: 104.5625rem;
+  gap: 2rem;
 height: 57.3125rem;
 flex-shrink: 0;
 
@@ -243,8 +222,8 @@ flex-shrink: 0;
 }
 
 .left{
-  width: 27.4375rem;
-  height: 50.3125rem;
+  width: 27rem;
+  height: 50rem;
   flex-shrink: 0;
   border-radius: 0.625rem;
   border: 1px solid #BE0202;
@@ -259,8 +238,8 @@ flex-shrink: 0;
 }
 
 .under{
-  width: 27.4375rem;
-height: 50.3125rem;
+  width: 27rem;
+height: 50rem;
 flex-shrink: 0;
 border-radius: 0.625rem;
 border: 1px solid #BE0202;
