--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -283,7 +283,7 @@
                             /*Doctors*/
 .doc-sec{
   width: 100%;
-  height: 105vh;
+  height: 95vh;
   display: inline-flex;
   padding: 2.0625rem 0rem 5.3125rem 2.9375rem;
   flex-direction: column;
@@ -322,7 +322,7 @@
 .doctors{
   display: flex;
   width: 100%;
-  height: 66rem;
+  /* height: 66rem; */
   justify-content: center;
   align-items: flex-start;
   gap: 1rem;
@@ -331,9 +331,10 @@
 
 .carousel{
   width: 100%;
-  height: 98vh;
+  height: 70vh;
   overflow: hidden;
   cursor: grab;
+  overflow-x: auto;
 }
 
 .inner-carousel{
