--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -188,6 +188,7 @@
 
 .childh .recording:hover{
   height: auto;
+  cursor: pointer;
   transform: scale(1.1); 
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75); 
 }
@@ -284,6 +285,7 @@
 .doc-sec{
   width: 100%;
   height: 105vh;
+  /* max-width:100vw; */
   display: inline-flex;
   padding: 2.0625rem 0rem 5.3125rem 2.9375rem;
   flex-direction: column;
@@ -434,6 +436,7 @@
   width: 100%;
   height: 47rem;
   flex-shrink: 0;
+  /* max-width:100vw; */
 }
 
 .about-sec h2{
@@ -501,6 +504,7 @@
   display: flex;
   width: 100%;
   height: 43.5rem;
+ /* max-width:100vw; */
   padding: 5rem 5rem 0rem 5rem;
   align-items: flex-start;
   gap: 5rem;
