--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -279,16 +279,17 @@
   line-height: normal;
 }
 
-
-
                             /*Doctors*/
+
 .doc-sec{
   width: 100%;
-  height: 95vh;
-  display: inline-flex;
-  padding: 2.0625rem 0rem 5.3125rem 2.9375rem;
+  height: 105vh;
+  display: flex;
+  flex-shrink: 0;
+  padding: 2.0625rem 0rem 5rem 2rem;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 2.5rem;
   background: linear-gradient(90deg, rgba(190, 2, 2, 0.22) 1.84%, rgba(190, 2, 2, 0.54) 50.92%, rgba(190, 2, 2, 0.22) 100%);
 }
@@ -323,19 +324,25 @@
 .doctors{
   display: flex;
   width: 100%;
-  /* height: 66rem; */
+  height: 66rem; 
   justify-content: center;
   align-items: flex-start;
   gap: 1rem;
   flex-shrink: 0;
 }
 
+                            /* carousel */
+
 .carousel{
   width: 100%;
-  height: 70vh;
+  height: 80vh;
   overflow: hidden;
   cursor: grab;
   overflow-x: auto;
+}
+
+.carousel::-webkit-scrollbar{
+  display: none;
 }
 
 .inner-carousel{
@@ -353,8 +360,9 @@
   width: 43vh;
   height: 80vh;
   padding-top: 2rem;
-  
 }
+
+                          /* carousel-content*/
 
 .doc-name h4{
   color:#21272A;
@@ -430,13 +438,12 @@
   transform: scale(1.1);
 }
 
-                                  /* About */
+                              /* About */
 
 .about-sec{
   width: 100%;
   height: 47rem;
   flex-shrink: 0;
-  /* max-width:100vw; */
 }
 
 .about-sec h2{
